Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -145,7 +145,7 @@ button{
 
 
 <div class="navbar">
-  <div class="header">&nbsp; &nbsp; INGWE <span style="font-size: 15px;">Power</span>  <div class="centeraled" ><a href="LOGIN1.html"><span style="text-decoration:underline;font-size: 20px;">Login</span> </a></div>
+  <div class="header">&nbsp; &nbsp; INGWE <span style="font-size: 15px;">Power</span>  <div class="centeraled" ><a href="LOGIN1.html"><span style="text-decoration:underline;font-size: 20px;"></span> </a></div>
   <div class="leonce" ><a href="about us.html"><span style="text-decoration:underline;font-size: 15px;">About</span></a></div>
 </div>
 <!DOCTYPE html>
@@ -247,6 +247,12 @@ color: black;
         <!-- Content of Tabs -->
         <div class="tab-content">
             <div id="Tab1" class="active">
+               <fieldset><b>Lille &nbsp;<span style="font-size: 20px; color: white;">1-0</span>  &nbsp;Real madrid</b><br>
+                &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;               <div class="ahayo"><button id="myBtn" onclick="javascript:alert('First you have to login')">WIN</button></div></a>
+              <div class="ahayo"><button id="myBtn" onclick="javascript:alert('First you have to login')">DRAW</button></div> 
+              
+                          <div class="ahayo"><button id="myBtn" onclick="javascript:alert('Genda wifashishe INGWE power member ushyigikire team yawe')">WIN</button></div>
+            </fieldset>
            
     <fieldset><b>FC PORTO &nbsp;<span style="font-size: 20px; color: white;">3-3</span>  &nbsp;MAN U</b><br>
       &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
