Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -389,10 +389,10 @@ color: black;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
           </fieldset>
-                  <fieldset><b>MAN U &nbsp;<span style="font-size: 20px; color: white;">11:30am</span>  &nbsp;Brentford FC</b><br>
+                  <fieldset><b>MAN U &nbsp;<span style="font-size: 20px; color: white;">11:30am</span>  &nbsp;Brentford FC</b>
               &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2.3</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X2</button><br><br>18/10
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X2</button><br>18/10
           </fieldset>
          
            
