--- a/home not login.html
+++ b/home not login.html
@@ -123,7 +123,7 @@ body {
 }
 button{
     padding: 10px 20px;
-
+ boredr-radius:10px;
     border: none;
     background-color: rgb(158, 196, 158);
 }
