Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -385,9 +385,9 @@ color: black;
         <div class="tab-content">
             <div id="Tab1" class="active">
                       <fieldset><b>BENIN &nbsp;<span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b><br>
-              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
+              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
           </fieldset>
                   <fieldset> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                     <b>MAN U &nbsp;<span style="font-size: 20px; color: white;">11:30am</span>  &nbsp;Brentford FC</b>
