Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -403,7 +403,7 @@ color: black;
               
             </fieldset></div>
             <div id="Tab3">
-              <fieldset><b>BENIN &nbsp; &nbsp; &nbsp;<span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b><br>
+              <fieldset><b>&nbsp; &nbsp;&nbsp; &nbsp;BENIN &nbsp; <span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b><br>
               &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
