Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -451,17 +451,17 @@ p{
             </fieldset>
             </div>
             <div id="Tab8">
-                                    <fieldset><b>L5 BDC &nbsp;<span style="font-size: 20px; color: white;">VS</span>  &nbsp;L4 NIT</b><br>
-              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
+                                    <fieldset><b>L4 NIT &nbsp;<span style="font-size: 20px; color: white;">VS</span>  &nbsp;L5 BDC</b><br>
+              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>12/10
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button><br><br>12/10
           </fieldset>
                   <fieldset> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                     <b>L3 TOR &nbsp;<span style="font-size: 20px; color: white;">VS</span>  &nbsp;L3 BDC</b>
-              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2.3</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X2</button><br>12/10
-          </fieldset>
+              &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button><br><br>12/10
+              </fieldset>
             </div>
         </div>
     </div>
