Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -388,7 +388,7 @@ p{
         <!-- Content of Tabs -->
         <div class="tab-content">
             <div id="Tab1" class="active">
-                                  <fieldset><b>BENIN &nbsp;<span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b><br>
+                                  <fieldset><b>BENIN &nbsp;<span style="font-size: 20px; color: white;">6:00pm</span>  &nbsp;RWANDA</b><br>
               &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
@@ -408,7 +408,7 @@ p{
             </fieldset></div>
             <div id="Tab3">
                              <fieldset> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                    <b>BENNIN &nbsp;<span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b>
+                    <b>BENIN &nbsp;<span style="font-size: 20px; color: white;">6:00pm</span>  &nbsp;RWANDA</b>
               &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br>11/10
@@ -426,7 +426,7 @@ p{
             </div>
             <div id="Tab5">
             
-                <fieldset><b>BENIN &nbsp;<span style="font-size: 20px; color: white;">4:00am</span>  &nbsp;RWANDA</b><br>
+                <fieldset><b>BENIN &nbsp;<span style="font-size: 20px; color: white;">6:00pm</span>  &nbsp;RWANDA</b><br>
               &nbsp;&nbsp;&nbsp; <a href="" style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <button id="myBtn" style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.5</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gutsindira amahirwe yawe!')">DRAW <br>X2</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button id="myBtn"  style="border-radius:10px;" onclick="javascript:alert('Egera umukozi wa INGWE Power agufashe gushigikira team yawe!')">WIN <br>X1.8</button><br><br>11/10
