Update home not login.html

--- a/home not login.html
+++ b/home not login.html
@@ -101,10 +101,12 @@ body {
 
 /* Footer */
 .footer {
+  margin: -20px;;
   text-align: center;
   padding: 20px;
  font-size: 10px;
-  background: #ddd;
+  background: black;
+
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
