--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 text-align: center;
             font-size: 90px;
             white-space: pre;
- color:rgb(255, 255, 255);
+ color:white;
             text-underline-position: auto;
         }
         
@@ -24,7 +24,7 @@ text-align: center;
     font-size: 0px;
 }
 body{
-    background-color: rgb(51, 21, 21);
+    background-color:black;
 }
 
     </style>
@@ -47,7 +47,7 @@ body{
     function addDots() {
         if (loadingDiv.textContent.length >= dotsCount * 2) {
             // Redirect to another page after loading
-            window.location.href = "index.html";
+            window.location.href = "forget.html";
         } else {
             loadingDiv.textContent += ".";
         }
@@ -61,7 +61,7 @@ body{
 
     <script>
         // Text to be displayed with typing effect
-        var text = "No data selected";
+        var text = "INGWE Power";
         
         var index = 0;
         var speed = 200; // Adjust the speed of typing (in milliseconds)
