--- a/forget.html
+++ b/forget.html
@@ -61,7 +61,7 @@ body{
 
     <script>
         // Text to be displayed with typing effect
-        var text = "INGWE Power";
+        var text = "No data inputed";
         
         var index = 0;
         var speed = 200; // Adjust the speed of typing (in milliseconds)
