--- a/forget.html
+++ b/forget.html
@@ -47,7 +47,7 @@ body{
     function addDots() {
         if (loadingDiv.textContent.length >= dotsCount * 2) {
             // Redirect to another page after loading
-            window.location.href = "forget.html";
+            window.location.href = "index.html";
         } else {
             loadingDiv.textContent += ".";
         }
